Algunos cambios de estética

--- a/system_huellitas/views/public/actualizar_contra.html
+++ b/system_huellitas/views/public/actualizar_contra.html
@@ -30,19 +30,19 @@
                 <form action="" id="saveForm" class="mt-5 p-4">
                     <div class="mb-5">
                         <label for="claveActual" class="form-label fw-semibold">Contraseña actual</label>
-                        <input type="password" id="claveActual" name="claveActual"
+                        <input type="password" id="claveActual" name="claveActual" required
                             class="form-control form-control-lg shadow rounded-4 bg-white">
                     </div>
                     <div class="mb-5">
                         <div class="row">
                             <div class="col-6">
                                 <label for="claveNueva" class="form-label fw-semibold">Nueva contraseña</label>
-                                <input type="password" id="claveNueva" name="claveNueva"
+                                <input type="password" id="claveNueva" name="claveNueva"  required
                                 class="form-control form-control-lg shadow rounded-4 bg-white">
                             </div>
                             <div class="col-6">
                                 <label for="ConfirmarClave" class="form-label fw-semibold">Confirmar contraseña</label>
-                                <input type="password" id="ConfirmarClave" name="ConfirmarClave"
+                                <input type="password" id="ConfirmarClave" name="ConfirmarClave" required
                                 class="form-control form-control-lg shadow rounded-4 bg-white">
                             </div>
                         </div>
