--- a/system_huellitas/views/public/categorias.html
+++ b/system_huellitas/views/public/categorias.html
@@ -25,17 +25,15 @@
     <!-- Contenido principal -->
     <main>
         <!--Titulo del contenido-->
-        <div class="container-fluid text-center bg-orange-cream-color text-white pt-5">
+        <div class="container-fluid text-center bg-orange-cream-color text-white pt-5 pb-4 mt-5">
             <!--Titulo del contenido-->
-            <br>
             <h1 class="p-3" id="titulo"></h1>
-            <br>
         </div>
 
         <!-- Contenedor principal -->
-        <div class="container-fluid bg-white mt-5 pt-5 rounded-4 mx-1">
+        <div class="mt-5 ms-5 me-5 p-5 mb-5 rounded-4 mx-1">
             <!-- Fila para organizar el contenido -->
-            <div class="row row-cols-1 row-cols-md-4 g-4 text-center" id="contenedorPadre">
+            <div class="row row-cols-1 row-cols-md-4 g-4 text-center justify-content-center" id="contenedorPadre">
                 <!-- Aquí iran las categorías de los productos -->
             </div>
         </div>
