--- a/system_huellitas/views/public/historial_compras.html
+++ b/system_huellitas/views/public/historial_compras.html
@@ -29,16 +29,14 @@
         <div class="container-fluid pt-5">
             <br>
             <!-- Título de la sección de historial de compras -->
-            <div class="p-5">
+            <div class="p-5 ms-5">
                 <h3><b>Historial de compras</b></h3>
                 <h6>Mis Compras</h6>
             </div>
             <div class="container">
                 <!-- py-4 agrega un margin vertical entre el boton y el buscador -->
                 <div class="row align-items-center gy-4">
-                    <div>
-                        <h6>Para poder ver más detalladamente los detalles del pedido, presionar el pedido que desea ver.</h6>
-                    </div>
+                    <h6>Para poder ver más detalladamente los pedidos, presiona el pedido que desea ver.</h6>
                 </div>
             </div>
             <!-- Contenedor principal del historial de compras -->
