--- a/system_huellitas/views/public/perfil.html
+++ b/system_huellitas/views/public/perfil.html
@@ -27,11 +27,11 @@
         <div class="container-fluid pt-5">
             <br>
             <!-- Título de la página -->
-            <h5 class="p-5">
-                <img src="../../resources/img/png/rectangulo_naranja.png">Perfil
+            <h5 class="p-5 ms-5">
+                <img src="../../resources/img/png/rectangulo_naranja.png" class="me-3">Perfil
             </h5>
             <!-- Contenedor principal -->
-            <div class="container shadow p-4 mt-4 rounded-4 color_conteiner_central">
+            <div class="container shadow p-4 mt-1 rounded-4 color_conteiner_central">
                 <div class="row">
                     <!-- Columna izquierda: Imagen de perfil -->
                     <div class="col-lg-4 col-md-6 col-sm-7 p-5">
@@ -77,7 +77,7 @@
     </main>
 
     <!-- Espacio adicional en la parte inferior de la página -->
-    <div class="mt-5 p-5">
+    <div class="mt-5 p-4">
 
     </div>
 
