--- a/system_huellitas/views/public/registro.html
+++ b/system_huellitas/views/public/registro.html
@@ -44,12 +44,12 @@
                         <div class="col-sm-12 col-md-4">
                             <div class="mb-3">
                                 <label for="nombre_cliente" class="form-label fw-bold">Nombre</label>
-                                <input type="text" id="nombre_cliente" name="nombreCliente"
+                                <input type="text" id="nombre_cliente" name="nombreCliente" placeholder="Escribe tus nombres"
                                     class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
                             </div>
                             <div class="mb-3">
                                 <label for="dui_cliente" class="form-label fw-bold">Dui</label>
-                                <input type="text" id="dui_cliente" name="duiCliente"
+                                <input type="text" id="dui_cliente" name="duiCliente" placeholder="Ejem. 12345678-9"
                                     class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
                             </div>
                             <div class="mb-3">
@@ -60,7 +60,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="direccion_cliente" class="form-label fw-bold">Dirección</label>
-                                <input type="text" id="direccion_cliente" name="direccionCliente"
+                                <input type="text" id="direccion_cliente" name="direccionCliente" placeholder="Ejem. Col. Escalon #5"
                                     class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
                             </div>
                             <div class="mb-3">
@@ -73,17 +73,17 @@
                         <div class="col-sm-12 col-md-4">
                             <div class="mb-3">
                                 <label for="apellido_cliente" class="form-label fw-bold">Apellidos</label>
-                                <input type="text" id="apellido_cliente" name="apellidoCliente"
+                                <input type="text" id="apellido_cliente" name="apellidoCliente" placeholder="Escribe tus apellidos"
                                     class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
                             </div>
                             <div class="mb-3">
                                 <label for="email_cliente" class="form-label fw-bold">Correo electrónico</label>
-                                <input type="email" id="email_cliente" name="correoCliente"
+                                <input type="email" id="email_cliente" name="correoCliente" placeholder="Ejem. huellitas@gmail.com"
                                     class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
                             </div>
                             <div class="mb-3">
                                 <label for="telefono_cliente" class="form-label fw-bold">Teléfono</label>
-                                <input type="text" id="telefono_cliente" name="telefonoCliente"
+                                <input type="text" id="telefono_cliente" name="telefonoCliente" placeholder="Ejem. 7014-7114"
                                        class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
                             </div>
                             <div class="mb-3">
