--- a/system_huellitas/views/public/perfil_editar.html
+++ b/system_huellitas/views/public/perfil_editar.html
@@ -36,9 +36,7 @@
                     <!-- Columna izquierda: Formulario para editar la información del perfil -->
                     <div class="col-lg-4 col-md-6 col-sm-7 p-5">
                         <form action="" id="saveForm">
-                            <img id="imagen" class="img-fluid">
-                            <br>
-                            <br>
+                            <img id="imagen" class="mb-4" width="335px" height="250px">
                             <div class="d-grid gap-2">
                                 <!-- Botón para cargar imagen -->
                                 <input type="file" class="form-control" id="imgCliente" name="imagenCliente" hidden>
