Algunos cambios de estética

--- a/system_huellitas/views/public/perfil.html
+++ b/system_huellitas/views/public/perfil.html
@@ -5,7 +5,7 @@
     <!-- Encabezado -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil</title>
+    <title>Huellitas Pet's - Perfil</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
     <link type="image/png" rel="icon" href="../../resources/img/png/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
@@ -44,20 +44,17 @@
                     <!-- Columna derecha: Información del perfil -->
                     <div class="col-lg-7 col-md-5 col-sm-8 p-5">
                         <h5><b>Nombre</b></h5>
-                        <p class="text-grey" id="nombreCliente"></p>
-                        <br>
+                        <p class="text-grey mb-4" id="nombreCliente"></p>
                         <h5><b>Correo</b></h5>
-                        <p class="text-grey" id="correoCliente"></p>
-                        <br>
+                        <p class="text-grey mb-4" id="correoCliente"></p>
                         <h5><b>Teléfono</b></h5>
-                        <p class="text-grey" id="telefonoCliente"></p>
-                        <br>
+                        <p class="text-grey mb-4" id="telefonoCliente"></p>
                         <h5><b>Dirección</b></h5>
-                        <p class="text-grey" id="direccionCliente"></p>
-                        <br>
+                        <p class="text-grey mb-4" id="direccionCliente"></p>
                         <h5><b>DUI</b></h5>
-                        <p class="text-grey" id="duiCliente"></p>
-                        <br>
+                        <p class="text-grey mb-4" id="duiCliente"></p>
+                        <h5><b>Fecha de nacimiento</b></h5>
+                        <p class="text-grey mb-4" id="nacimiento"></p>
                         <!-- Botones de acción (Agregar, Ocultar) -->
                         <a href="../../views/public/perfil_editar.html"><button type="button"
                                 class="btn btn-orange-color text-white"><img class="img_btn_perfil"
@@ -70,7 +67,7 @@
                         <br>
                     </div>
                 </div>
-                <h5><b>Empezo</b></h5>
+                <h5><b>Empezó</b></h5>
                 <p class="text-grey" id="fechaInicioCliente"></p>
             </div>
         </div>
