--- a/system_huellitas/views/public/login.html
+++ b/system_huellitas/views/public/login.html
@@ -41,14 +41,14 @@
                         <div class="col-sm-12 col-md-10">
                             <div class="mb-8">
                                 <label for="email_cliente" class="form-label fw-bold">Correo electrónico</label>
-                                <input type="email" id="email_cliente" name="correo"
+                                <input type="email" id="email_cliente" name="correo" placeholder="huellitas@gmail.com"
                                     class="form-control form-control-lg shadow  rounded-3 bg-white">
                             </div>
                             <br>
                             <div class="mb-8">
                                 <label for="clave_cliente" class="form-label fw-bold">Contraseña</label>
                                 <input type="password" id="clave_cliente" name="clave"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white" placeholder="Escribe tú contraseña">
                                 <div class="olvidaste_contrasenia">
                                     <a class="text-decoration-none text-dark fw-semibold"
                                         href="../public/recuperacion_contra_1.html"> ¿Olvidaste tu contraseña?</a>
