--- a/system_huellitas/views/public/perfil.html
+++ b/system_huellitas/views/public/perfil.html
@@ -34,9 +34,9 @@
             <div class="container shadow p-4 mt-1 rounded-4 color_conteiner_central">
                 <div class="row">
                     <!-- Columna izquierda: Imagen de perfil -->
-                    <div class="col-lg-4 col-md-6 col-sm-7 p-5">
+                    <div class="col-lg-4 col-md-6 col-sm-7 p-5 text-center">
                         <form action="perfil_editar_imagen" id="perfil_cliente_vista">
-                            <img id="imagen" class="img-fluid">
+                            <img id="imagen" width="300px" height="270px" >
                             <br>
                             <br>
                         </form>
