--- a/system_huellitas/views/public/perfil_editar.html
+++ b/system_huellitas/views/public/perfil_editar.html
@@ -17,33 +17,33 @@
 </head>
 
 <body>
-    <!-- Encabezado de la página -->
-    <header>
-        <nav id="navbar"></nav>
-    </header>
+<!-- Encabezado de la página -->
+<header>
+    <nav id="navbar"></nav>
+</header>
 
-    <main>
-        <!-- Sección principal de la página -->
-        <div class="container-fluid pt-5">
-            <br>
-            <!-- Título de la página -->
-            <h5 class="p-5">
-                <img src="../../resources/img/png/rectangulo_naranja.png">Perfil
-            </h5>
-            <!-- Contenedor principal -->
-            <div class="container shadow p-4 mt-4 rounded-4 color_conteiner_central">
+<main>
+    <!-- Sección principal de la página -->
+    <div class="container-fluid pt-5">
+        <br>
+        <!-- Título de la página -->
+        <h5 class="p-5 ms-5">
+            <img src="../../resources/img/png/rectangulo_naranja.png" class="me-3">Perfil
+        </h5>
+        <!-- Contenedor principal -->
+        <form id="saveForm">
+            <div class="container shadow p-4 mt-1 rounded-4 color_conteiner_central">
                 <div class="row">
                     <!-- Columna izquierda: Formulario para editar la información del perfil -->
                     <div class="col-lg-4 col-md-6 col-sm-7 p-5">
-                        <form action="" id="saveForm">
-                            <img id="imagen" class="mb-4" width="335px" height="250px">
-                            <div class="d-grid gap-2">
-                                <!-- Botón para cargar imagen -->
-                                <input type="file" class="form-control" id="imgCliente" name="imagenCliente" hidden>
-                                <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                                <label class="btn btn-outline-secondary btn-lg" for="imgCliente">Cargar
-                                    imagen</label>
-                            </div>
+                        <img id="imagen" class="mb-4" width="335px" height="250px">
+                        <div class="d-grid gap-2">
+                            <!-- Botón para cargar imagen -->
+                            <input type="file" class="form-control" id="imgCliente" name="imagenCliente" hidden>
+                            <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                            <label class="btn btn-outline-secondary btn-lg" for="imgCliente">Cargar
+                                imagen</label>
+                        </div>
                     </div>
                     <!-- Columna derecha: Campos para editar la información del perfil -->
                     <div class="col-lg-7 col-md-5 col-sm-8 p-5">
@@ -51,32 +51,45 @@
                             <div class="col-12 col-md-6">
                                 <label for="nombreCliente" class="form-label fw-bold">Nombre</label>
                                 <input type="text" id="nombreCliente" name="nombreCliente"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                       class="form-control form-control-lg shadow  rounded-3 bg-white">
                                 <br>
                             </div>
                             <div class="col-12 col-md-6">
                                 <label for="apellidoCliente" class="form-label fw-bold">Apellidos</label>
                                 <input type="text" id="apellidoCliente" name="apellidoCliente"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                       class="form-control form-control-lg shadow  rounded-3 bg-white">
                                 <br>
                             </div>
                             <div class="col-12 col-md-6">
                                 <label for="duiCliente" class="form-label fw-bold">DUI</label>
                                 <input type="text" id="duiCliente" name="duiCliente"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                       class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                <br>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="correoCliente" class="form-label fw-bold">Correo electrónico</label>
+                                <input type="email" id="correoCliente" name="correoCliente"
+                                       class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                <br>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <label for="nacimientoCliente" class="form-label fw-bold">Fecha de
+                                    nacimiento</label>
+                                <input type="date" id="nacimientoCliente" name="nacimientoCliente"
+                                       class="form-control form-control-lg shadow  rounded-3 bg-white">
                                 <br>
                             </div>
                             <div class="col-12 col-md-6">
                                 <label for="telefonoCliente" class="form-label fw-bold">Teléfono</label>
                                 <input type="text" id="telefonoCliente" name="telefonoCliente"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white">
+                                       class="form-control form-control-lg shadow  rounded-3 bg-white">
                                 <br>
                             </div>
                             <div class="col-12 col-md-12">
                                 <label for="direccionCliente" class="form-label fw-bold">Dirección</label>
                                 <textarea class="form-control form-control-lg shadow  rounded-3 bg-white"
-                                    name="direccionCliente" id="direccionCliente" maxlength="250" required
-                                    rows="3"></textarea>
+                                          name="direccionCliente" id="direccionCliente" maxlength="250" required
+                                          rows="3"></textarea>
                                 <br>
                             </div>
                         </div>
@@ -84,30 +97,30 @@
                         <br>
                         <!-- Botones de acción (Agregar, Ocultar) -->
                         <a href="../../views/public/perfil.html"><button type="submit"
-                        class="btn btn-brown-color btn-lg text-white">Actualizar</button></a>
+                                                                         class="btn btn-brown-color btn-lg text-white">Actualizar</button></a>
                         <br>
                     </div>
-                    </form>
                 </div>
             </div>
-        </div>
-    </main>
-
-    <!-- Espacio adicional en la parte inferior de la página -->
-    <div class="mt-5 p-5">
-
+        </form>
     </div>
+</main>
 
-    <footer id="footer"></footer>
+<!-- Espacio adicional en la parte inferior de la página -->
+<div class="mt-5 p-5">
 
-    <!-- Agregamos el framework de boostrap - js -->
-    <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
-    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
-    <script type="text/javascript"  src="../../node_modules/vanilla-text-mask/dist/vanillaTextMask.js"></script>
-    <!-- Agregamos la ruta para agregar el menu -->
-    <script src="../../controllers/utils/public.js"></script>
-    <script type="text/javascript" src="../../controllers/public/perfil_editar.js"></script>
+</div>
+
+<footer id="footer"></footer>
+
+<!-- Agregamos el framework de boostrap - js -->
+<script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+<script type="text/javascript" src="../../controllers/utils/components.js"></script>
+<script type="text/javascript" src="../../node_modules/vanilla-text-mask/dist/vanillaTextMask.js"></script>
+<!-- Agregamos la ruta para agregar el menu -->
+<script src="../../controllers/utils/public.js"></script>
+<script type="text/javascript" src="../../controllers/public/perfil_editar.js"></script>
 </body>
 
 </html>
