Revisión de código - Identación de sangría

--- a/system_huellitas/views/public/carrito_1.html
+++ b/system_huellitas/views/public/carrito_1.html
@@ -46,7 +46,7 @@
 
 
                     </ul>
-                    <div class="text-center mt-5 d-none" id="anyProducts" >
+                    <div class="text-center mt-5 d-none" id="anyProducts">
                         <h4 class="fw-bold">No hay productos agregados al carrito</h4>
                     </div>
                 </div>
@@ -59,7 +59,8 @@
                             <p class="fw-bold fs-5">Total a pagar</p>
                             <p class="fw-bold fs-4" id="totalPrice"></p>
                         </div>
-                        <button class="btn btn-orange-color fw-semibold d-grid grap-2 text-light rounded-4 w-100 btn-lg" onclick="goToPage()">Ir a pagar</button>
+                        <button class="btn btn-orange-color fw-semibold d-grid grap-2 text-light rounded-4 w-100 btn-lg"
+                            onclick="goToPage()">Ir a pagar</button>
                         <div class="text-center mt-3">
                             <small class="fw-light">Compra 100% segura</small>
                         </div>
@@ -69,7 +70,9 @@
             <div class="d-flex justify-content-start mt-4 mb-5">
                 <a href="../../views/public/categorias.html?mascota=Perros"><img
                         src="../../resources/img/png/row.png"></a>
-                <a class="text-decoration-none text-dark" href="../../views/public/categorias.html?mascota=Perros"><p class="ms-3 mt-1">Seguir comprando</p></a>
+                <a class="text-decoration-none text-dark" href="../../views/public/categorias.html?mascota=Perros">
+                    <p class="ms-3 mt-1">Seguir comprando</p>
+                </a>
             </div>
         </div>
 
