--- a/system_huellitas/views/public/historial_compras.html
+++ b/system_huellitas/views/public/historial_compras.html
@@ -42,7 +42,7 @@
             <!-- Contenedor principal del historial de compras -->
             <div class="container shadow p-4 mt-4 rounded-4 contenedor_historial">
                 <div id="historialContainer">
-                    
+
                 </div>
             </div>
 
@@ -76,7 +76,8 @@
                             <!-- Información adicional del pedido -->
                             <div class="col-sm-12 col-md-6">
                                 <!-- Etiqueta para el nombre -->
-                                <label class="form-check-label custom-bold-label" for="nombreCliente"><b>Nombre</b></label>
+                                <label class="form-check-label custom-bold-label"
+                                    for="nombreCliente"><b>Nombre</b></label>
                                 <br>
                                 <!-- Nombre del cliente -->
                                 <label class="form-check-label" id="nombreCliente" name="nombreCliente"></label>
@@ -85,7 +86,8 @@
                             <br>
                             <!-- Información de la dirección -->
                             <div class="col-sm-12 col-md-6">
-                                <label class="form-check-label custom-bold-label" for="direccion"><b>Dirección</b></label>
+                                <label class="form-check-label custom-bold-label"
+                                    for="direccion"><b>Dirección</b></label>
                                 <br>
                                 <label class="form-check-label" id="direccion" name="direccion"></label>
                             </div>
@@ -103,8 +105,8 @@
                             <br>
                             <div class="col-sm-12 col-md-6">
                                 <label class="form-check-label custom-bold-label" for="totalAPagar"><b>Total
-                                    a
-                                    pagar</b></label>
+                                        a
+                                        pagar</b></label>
                                 <br>
                                 <!-- Monto total a pagar por el pedido -->
                                 <label class="form-check-label" id="totalAPagar" name="totalAPagar"></label>
@@ -133,7 +135,7 @@
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
     <script type="text/javascript" src="../../controllers/utils/components.js"></script>
-    <script type="text/javascript"  src="../../node_modules/vanilla-text-mask/dist/vanillaTextMask.js"></script>
+    <script type="text/javascript" src="../../node_modules/vanilla-text-mask/dist/vanillaTextMask.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script src="../../controllers/utils/public.js"></script>
     <script type="text/javascript" src="../../controllers/public/historial.js"></script>
