--- a/system_huellitas/views/public/login.html
+++ b/system_huellitas/views/public/login.html
@@ -48,7 +48,8 @@
                             <div class="mb-8">
                                 <label for="clave_cliente" class="form-label fw-bold">Contraseña</label>
                                 <input type="password" id="clave_cliente" name="clave"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white" placeholder="Escribe tú contraseña">
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white"
+                                    placeholder="Escribe tú contraseña">
                                 <div class="olvidaste_contrasenia">
                                     <a class="text-decoration-none text-dark fw-semibold"
                                         href="../public/recuperacion_contra_1.html"> ¿Olvidaste tu contraseña?</a>
@@ -58,10 +59,13 @@
                         <!-- Columna para el botón de inicio de sesión y el enlace de registro -->
                         <div class="text-center mt-5">
                             <!-- Columna para el botón de inicio de sesión y el enlace de registro -->
-                            <button type="submit" class="btn btn-orange-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-6 mx-auto text-white">Iniciar sesión</button>
+                            <button type="submit"
+                                class="btn btn-orange-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-6 mx-auto text-white">Iniciar
+                                sesión</button>
                             <!-- Enlace para registrarse -->
                             <div>
-                                ¿No tienes una cuenta?<a class="text-decoration-none text-dark fw-semibold" href="../public/registro.html"> Registrate</a>
+                                ¿No tienes una cuenta?<a class="text-decoration-none text-dark fw-semibold"
+                                    href="../public/registro.html"> Registrate</a>
                             </div>
                         </div>
                     </div>
