--- a/system_huellitas/views/public/productos_categoria.html
+++ b/system_huellitas/views/public/productos_categoria.html
@@ -32,8 +32,9 @@
                     </div>
                     <div class="col-12">
                         <div class="dropdown d-grid grap-2" id="DropDown_ModificarPed" name="DropDown_ModificarPedN">
-                            <select class="form-select shadow" id="selectMarcas" onchange="recargarConteiner('readProductsByMarca')">
-                                
+                            <select class="form-select shadow" id="selectMarcas"
+                                onchange="recargarConteiner('readProductsByMarca')">
+
                             </select>
                         </div>
                     </div>
@@ -47,8 +48,9 @@
                     </div>
                     <div class="col-12">
                         <div class="dropdown d-grid grap-2 " id="DropDown_ModificarPed" name="DropDown_ModificarPedN">
-                            <select class="form-select shadow" id="selectCategorias" onchange="recargarConteiner('readProductsByCategoria')">
-                                
+                            <select class="form-select shadow" id="selectCategorias"
+                                onchange="recargarConteiner('readProductsByCategoria')">
+
                             </select>
                         </div>
                     </div>
