--- a/system_huellitas/views/public/registro.html
+++ b/system_huellitas/views/public/registro.html
@@ -31,7 +31,8 @@
                             <h1 class="fw-bold text-center">Regístrate</h1>
                             <p class="fs-5">¡Bienvenido a Huellitas Pet’s!</p>
                             <img src="../../resources/img/png/rectangulo.png"
-                                class="picture rounded-circle mx-auto d-block shadow" id="imagen" width="180px" height="180px">
+                                class="picture rounded-circle mx-auto d-block shadow" id="imagen" width="180px"
+                                height="180px">
                             <!-- Escondemos como se muestra por defecto el input file y solo que aparezca nuestro boton -->
                             <input type="file" class="form-control" id="imagenCliente" name="imagenCliente" hidden>
                             <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
@@ -44,61 +45,77 @@
                         <div class="col-sm-12 col-md-4">
                             <div class="mb-3">
                                 <label for="nombre_cliente" class="form-label fw-bold">Nombre</label>
-                                <input type="text" id="nombre_cliente" name="nombreCliente" placeholder="Escribe tus nombres"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
+                                <input type="text" id="nombre_cliente" name="nombreCliente"
+                                    placeholder="Escribe tus nombres"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off"
+                                    required>
                             </div>
                             <div class="mb-3">
                                 <label for="dui_cliente" class="form-label fw-bold">Dui</label>
                                 <input type="text" id="dui_cliente" name="duiCliente" placeholder="Ejem. 12345678-9"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off"
+                                    required>
                             </div>
                             <div class="mb-3">
                                 <label for="fecha_nacimiento_cliente" class="form-label fw-bold">Fecha de
                                     nacimiento</label>
                                 <input type="date" id="fecha_nacimiento_cliente" name="nacimientoCliente"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white"  required>
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white" required>
                             </div>
                             <div class="mb-3">
                                 <label for="direccion_cliente" class="form-label fw-bold">Dirección</label>
-                                <input type="text" id="direccion_cliente" name="direccionCliente" placeholder="Ejem. Col. Escalon #5"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
+                                <input type="text" id="direccion_cliente" name="direccionCliente"
+                                    placeholder="Ejem. Col. Escalon #5"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off"
+                                    required>
                             </div>
                             <div class="mb-3">
                                 <label for="clave" class="form-label fw-bold">Confirmar contraseña</label>
                                 <input type="password" id="clave" name="claveCliente"
-                                       class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off"
+                                    required>
                             </div>
                         </div>
                         <!-- Segunda col -->
                         <div class="col-sm-12 col-md-4">
                             <div class="mb-3">
                                 <label for="apellido_cliente" class="form-label fw-bold">Apellidos</label>
-                                <input type="text" id="apellido_cliente" name="apellidoCliente" placeholder="Escribe tus apellidos"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
+                                <input type="text" id="apellido_cliente" name="apellidoCliente"
+                                    placeholder="Escribe tus apellidos"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off"
+                                    required>
                             </div>
                             <div class="mb-3">
                                 <label for="email_cliente" class="form-label fw-bold">Correo electrónico</label>
-                                <input type="email" id="email_cliente" name="correoCliente" placeholder="Ejem. huellitas@gmail.com"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
+                                <input type="email" id="email_cliente" name="correoCliente"
+                                    placeholder="Ejem. huellitas@gmail.com"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off"
+                                    required>
                             </div>
                             <div class="mb-3">
                                 <label for="telefono_cliente" class="form-label fw-bold">Teléfono</label>
-                                <input type="text" id="telefono_cliente" name="telefonoCliente" placeholder="Ejem. 7014-7114"
-                                       class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
+                                <input type="text" id="telefono_cliente" name="telefonoCliente"
+                                    placeholder="Ejem. 7014-7114"
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off"
+                                    required>
                             </div>
                             <div class="mb-3">
                                 <label for="confirmar_clave" class="form-label fw-bold">Contraseña</label>
                                 <input type="password" id="confirmar_clave" name="confirmarClave"
-                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off" required>
+                                    class="form-control form-control-lg shadow  rounded-3 bg-white" autocomplete="off"
+                                    required>
                             </div>
                         </div>
                         <div class="form-check d-flex justify-content-center mt-3">
-                            <input type="checkbox" class="form-check-input me-2 shadow" id="condicion" name="condicion" required>
+                            <input type="checkbox" class="form-check-input me-2 shadow" id="condicion" name="condicion"
+                                required>
                             <label class="form-check-label" for="condicion">Acepto términos y condiciones</label>
                         </div>
                         <!-- Boton y texto -->
                         <div class="text-center mt-5">
-                            <button type="submit" class="btn btn-brown-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-4 mx-auto"> Regístrarse</button>
+                            <button type="submit"
+                                class="btn btn-brown-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-4 mx-auto">
+                                Regístrarse</button>
                             <div>
                                 ¿Ya tienes una cuenta?<a class="text-decoration-none text-dark fw-bold"
                                     href="../public/login.html"> Iniciar sesión</a>
@@ -109,8 +126,9 @@
             </div>
         </div>
         <!-- Inclusión de la librería del reCAPTCHA. Para más información https://developers.google.com/recaptcha/docs/v3 -->
-        <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?render=6Lei6ukpAAAAAMPZ16eVEUcYgV8tw9chT6noaxm7"></script>
-        <script type="text/javascript"  src="../../node_modules/vanilla-text-mask/dist/vanillaTextMask.js"></script>
+        <script type="text/javascript"
+            src="https://www.google.com/recaptcha/api.js?render=6Lei6ukpAAAAAMPZ16eVEUcYgV8tw9chT6noaxm7"></script>
+        <script type="text/javascript" src="../../node_modules/vanilla-text-mask/dist/vanillaTextMask.js"></script>
     </main>
 
     <!-- Agregamos nuestro footer a la pantalla -->
