--- a/system_huellitas/views/public/categorias.html
+++ b/system_huellitas/views/public/categorias.html
@@ -45,6 +45,8 @@
     <!-- Scripts de JavaScript -->
     <!-- Bootstrap -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la libreria para alertas -->
+    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
     <!-- Agregamos la ruta para agregar el footer -->
     <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
