--- a/system_huellitas/views/public/contactanos.html
+++ b/system_huellitas/views/public/contactanos.html
@@ -45,8 +45,8 @@
                         </div>
                         <div class="mb-4">
                             <label for="mensajeCorreo" class="form-label fw-semibold">Mensaje</label>
-                            <textarea class="form-control form-control-lg bg-white shadow rounded-4"
-                                id="mensajeCorreo" name="mensajeCorreo" rows="3" required></textarea>
+                            <textarea class="form-control form-control-lg bg-white shadow rounded-4" id="mensajeCorreo"
+                                name="mensajeCorreo" rows="3" required></textarea>
                         </div>
 
                         <div id="cargaContainer" class="d-flex justify-content-center d-none">
@@ -57,7 +57,7 @@
 
                         <div class="text-center mt-4">
                             <button type="submit" class="btn btn-orange-color mb-2 text-light col-md-4"
-                                    id="btn_enviar">Envíar</button>
+                                id="btn_enviar">Envíar</button>
                         </div>
                     </form>
                 </div>
