--- a/system_huellitas/views/public/index.html
+++ b/system_huellitas/views/public/index.html
@@ -78,11 +78,13 @@
                     <div id="carouselMarcas" class="carousel slide d-flex justify-content-center">
                         <div class="carousel-inner"></div>
 
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselMarcas" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselMarcas"
+                            data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselMarcas" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselMarcas"
+                            data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
